# gym_setting_db

./: .gitignore  README.md  pyproject.toml
src/gym_setting_db/: __init__.py  secrets.py
src/gym_setting_db/data/: boulder_grades.csv  colors.csv  rope_grades.csv
tests/: test_db.py
