[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gym_setting_db"
version = "2022.12.22"
authors = [
  { name="Alex Page", email="a.t.page@gmail.com" },
]
description = "Database for rock climbing gyms to track sets"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/atpage/gym_setting_db"
"Bug Tracker" = "https://github.com/atpage/gym_setting_db/issues"
